# ChangeLog for dev-libs/libev
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libev/ChangeLog,v 1.7 2008/11/13 11:41:16 matsuu Exp $

*libev-3.48 (13 Nov 2008)

  13 Nov 2008; MATSUU Takuto <matsuu@gentoo.org> -libev-3.42-r1.ebuild,
  +libev-3.48.ebuild:
  Version bumped.

  23 Sep 2008; Markus Rothe <corsair@gentoo.org> libev-3.43.ebuild:
  Added ~ppc

  24 Aug 2008; Markus Rothe <corsair@gentoo.org> libev-3.43.ebuild:
  Added ~ppc64; bug #234421

  14 Aug 2008; Alexis Ballier <aballier@gentoo.org> libev-3.43.ebuild:
  keyword ~x86-fbsd

*libev-3.43 (02 Aug 2008)

  02 Aug 2008; MATSUU Takuto <matsuu@gentoo.org> +libev-3.43.ebuild:
  Version bumped.

*libev-3.42-r1 (22 Jun 2008)

  22 Jun 2008; MATSUU Takuto <matsuu@gentoo.org>
  files/libev-3.42-gentoo.patch, -libev-3.42.ebuild, +libev-3.42-r1.ebuild:
  Removed event.h.

*libev-3.42 (17 Jun 2008)

  17 Jun 2008; MATSUU Takuto <matsuu@gentoo.org>
  +files/libev-3.42-gentoo.patch, +metadata.xml, +libev-3.42.ebuild:
  Initial import, bug #227819.
